--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -56,8 +56,8 @@ NOTE: CDB 2.0 does define Requirements Modules but based on the above proposed d
 
 [[fig-1]]
 .ModSpec V 1.0 Model for class/module relationship 
-image::../images/old-UML-model.jpg[]
+image::../../imagesold-UML-model.jpg[]
 
 [[fig-2]]
 .ModSpec V 1.1 Model for module/class relationship 
-image::../images/new-UML-model.jpg[]
+image::../../images/new-UML-model.jpg[]
