--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -185,8 +185,12 @@ set of logical and quantitative relationships between them.
 
 each of a set of standardized parts or independent units that can be used to construct a more complex structure
 
+NOTE: The concept 'module' is key to the ModSpec structure and model. Modules have a direct relationship to the concept `building blocks`. 
+The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs.
+Modules can be replaced without affecting the rest of the system.
+
 [.source]
-Dictionary of Computing, 4th Edition 2008
+Dictionary of Computing, 4th Edition 1998
 
 === optional requirements class
 
