--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -1,7 +1,7 @@
 [[Clause_Critical]]
 == Description of critical changes
 
-There are five (5) critical changes in the ModSpec: Core Standard. None of these chnages affect backwards compatibility.
+There are six (6) critical changes in the ModSpec: Core Standard. None of these changes affect backwards compatibility.
 
 === Critical Change 1: ModSpec 1.1 is not OGC Policy. 
 
@@ -60,3 +60,14 @@ image::../../images/old-UML-model.jpg[]
 [[fig-2]]
 .ModSpec V 1.1 Model for module/class relationship 
 image::../../images/new-UML-model.jpg[]
+
+=== Critical Change 6: Standardization Goal
+
+In considering the roles of `standardization target` and `standardization` target types`, the contribritors noticed 
+that there is no requirement to state what the `goal` (problem to be addressed) of the standard is. A goal provides the
+context for `standardization target` and `standardization` target types`. This is a concise statement of the problem that 
+the standard helps address and the strategy envisioned for achieving a solution.
+
+A clause stating this requirement is in the ModSpec v 1.1 in the Fundamentals clause. All new OGC Standards and revisions to exisitng OGC Standards _SHALL_
+contain a statement of the Standrdization Goal.
+
