--- a/sources/ogc-modspec-policy/06-policy.adoc
+++ b/sources/ogc-modspec-policy/06-policy.adoc
@@ -5,7 +5,7 @@ The following states requirements for the use of the ModSpec in OGC Standards de
 
 The following states that for any OGC Standards development, the ModSpec model will be used.
 
-- Any new OGC Standard, abstract specification containing requirements, or major revision of an existing OGC Standard _SHALL_ comply with the requirements stated in the OGC ModSpec Core Standard and relevent Parts.
+- Any new OGC Standard, revision to an existing OGC Standard, new abstract specification that has requirements, or revision to an existing abstract specification that has requirements _SHALL_ comply with the requirements stated in the OGC ModSpec Core Standard and relevant Parts.
 
 Any OGC Standards document must specify a standardization goal.
 
