--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -7,8 +7,8 @@ These requirements are also known as the `core` of the ModSpec. All the requirem
 comprise the ModSpec Core Requirements Class. 
 
 The following requirement states that every requirement in a standards document is associated with one or more requirements class(es).
+
 [[req-0]]
-[[/req/core/reqs-are-in-class]]
 [width="90%",cols="2,6a"]
 |===
 ^|*Requirement 0* |*/req/core/reqs-are-in-class*
@@ -22,7 +22,6 @@ There may be one or more requirements in a requirements class.
 The following requirement states that every requirement is testable.
 
 [[req-1]]
-[[/req/core/reqs-are-testable]]
 [width="90%",cols="2,6a"]
 |===
 ^|*Requirement 1* |*/req/core/reqs-are-testable*
@@ -35,17 +34,22 @@ Therefore, by definition, any requirements class that contains the requirement t
 The following requirement states that every component of a standard will have a unique identifier
 
 [[req-2]]
-include::../requirements/core/REQ_assigned-uri.adoc[]
+[width="90%",cols="2,6a"]
+|===
+^|*Requirement 2* |*/req/core/all-components-assigned-unique-identifier*
+^|A |Each component of the standard, including requirements, requirements modules, requirements classes, 
+conformance test, conformance modules, and conformance test classes _SHALL_ be assigned a unique identifer.
+|===
 
-NOTE: In the OGC, the enforcement of this requirement and its associated recommendation is the purview of
-the OGC Naming Authority or its equivalents.
+The following recommendation encourages the consistent use of these unique identifiers in the standard 
+as well as any external documentation referencing that standard.
 
 [[rec-1]]
 [recommendation,model=ogc,type="general"]
 [width="90%",cols="2,6"]
 |===
 |*REC001* | */req/core/uri-external-use* +
-These URI identities _SHOULD_ be used in any external documentation that reference
+These unique identifiers _SHOULD_ be used in any external documentation that reference
 these component elements in a normative manner, including but not limited to other
 standards, implementations of the conformance test suite, or certificates of
 conformance for implementations conformant to the standard in question.
@@ -62,12 +66,12 @@ The following permissions relate to possible content specified in the core of a 
 |===
 |*PER001* | */per/core/informational-content-in-core* +
 The informational and structural universals of the standard _MAY_ be included in the
-core text and its associated models without violations of the ModSpec. This is
+core text of the standard without violations of the ModSpec. This is
 true if the requirements of the extension are not implicit in what is
 included in the core.
 |===
 
-In this manner, the core requirements class and its associated contents can be
+In this manner, the core requirements class and its associated content can be
 thought of not only as the requirements of the core conformance class, but as a form
 of reference model for establishing core vocabularies and schemas for the entire
 standard.
@@ -78,7 +82,7 @@ standard.
 |===
 |*PER002* | */per/core/core-may-contain-schema-terms* +
 The core _MAY_ contain the definition and schema of commonly used terms and data
-structures for use in other structures throughout the standard.
+structures for use in other components and/or structures throughout the standard.
 |===
 
 [[per-3]]
@@ -86,7 +90,7 @@ structures for use in other structures throughout the standard.
 [width="90%",cols="2,6"]
 |===
 |*PER003* | */per/core/core-names-of-operations* +
-This may include the list of the names of all operations and operation parameters
+The core _MAY_ include the list of the names of all operations and operation parameters
 to be used in any request-response pairs defined in any conformance class of the
 standard. If a service receives a request that is not supported in its
 conformance claim, then the service may return an error message text stating that the
