Minor wording chnage for 'part of a requirement'

--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -197,7 +197,7 @@ Dictionary of Computing, 4th Edition 1998
 An optional requirements class may or may not be implemented or specified in a profile or extension. However, if a profile, extension, or implementation specifies the use of an optional requirements class, then every requirement in that requirements class _shall_ be implemented.
 
 === part of a requirment
-Collection of requirements that are parts to a requirement. Satisfaction of all requirement parts are necessary for this requirement to be satisfied. The use of `parts` is optional.
+Collection of sub-requirements that are parts of a requirement. Satisfaction of all requirement parts are necessary for this requirement to be satisfied. The use of `parts` is optional.
 
 === permission 
 
