--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -49,7 +49,7 @@ This is GitHub issue 10.
 
 In the ModSpec Version 1.0 there is a logical inconsistency related to the definitions, relationship, and modelling of requirements modules and requirements classes. In Version 1.0, a Requirements Class can be composed of one or more Requirements Modules and one or more Recommendations. However, multiple locations in the Vesion 1.0 document state that recommendations are not testable (Old Section 6.1 for example). This create a logical inconsistency as a Requirements Class is composed of requirements and recommendations but the wording of the conformance test class states that in order to be conformant that all elements of a requirements class must pass - but recommendations cannot be tested.
 
-So, given that most OGC Standards do not use Requirements Modules, then a straightforward solution is to swap Requirements Modules and Requirements classes in the hierarchy. As such, then a Requirements Module would consist of Requirements Classes, Recommendations, and Permissions. A Requirements Class would have no recommendations. Therefore, a Requirements Class would be testable.
+So, given that most OGC Standards do not use Requirements Modules, then a straightforward solution is to swap Requirements Modules and Requirements classes in the hierarchy. As such, then a Requirements Module would consist of Requirements Classes, Recommendations, and Permissions. A Requirements Class then has no recommendations and is therefore testable.
 
 NOTE: CDB 2.0 does define Requirements Modules but based on the above proposed definition.
 
@@ -62,4 +62,8 @@ the standard helps address and the strategy envisioned for achieving a solution.
 
 A clause stating this requirement is in the ModSpec v 1.1 in the Fundamentals clause. All new OGC Standards and revisions to exisitng OGC Standards _SHOULD_
 contain a statement of the Standardization Goal.
+
+=== Critical Change 7: Rework of UML Model
+
+The ModSpec includes Annex C. Annex C provides a UML diagram that documents the ModSpec Model. The UML diagram was update to reflect changes made based on submitted issues.
 
