--- a/sources/requirements/core/REQ_core-requirements-separate.adoc
+++ b/sources/requirements/core/REQ_core-requirements-separate.adoc
@@ -4,5 +4,5 @@
 ====
 [%metadata]
 identifier:: /req/core/core-requirements-separate
-part:: Every standard SHALL define and identify a core set of requirements as a separate conformance class.
+part:: Every standard SHALL define and identify a core set of requirements as a separate requirements class with a corresponding conformance class.
 ====
