--- a/sources/requirements/core/REQ_restriction-of-extensions.adoc
+++ b/sources/requirements/core/REQ_restriction-of-extensions.adoc
@@ -4,5 +4,5 @@
 ====
 [%metadata]
 identifier:: /req/core/restriction-of-extensions
-part:: A standard conformant to the ModSpec SHALL never restrict in any manner future, logically valid extensions of its standardization targets
+part:: A standard conformant to the ModSpec SHALL never restrict in any manner future, logically valid extensions of its standardization target types
 ====
