--- a/sources/requirements/core/REQ_test-class-single-standardization-target.adoc
+++ b/sources/requirements/core/REQ_test-class-single-standardization-target.adoc
@@ -4,5 +4,5 @@
 ====
 [%metadata]
 identifier:: /req/core/test-class-single-standardization-target
-part:: All conformance tests in a single conformance test class in a conformant standard SHALL have the same standardization target.
+part:: All conformance tests in a single conformance test class in a conformant standard SHALL have the same standardization target type.
 ====
